@@ -25,6 +25,10 @@ Version 4.0.11
    patch: Zac Medico
  * Fix: MD5 encoding
    reported by: Adam Jacob Muller (with an initial idea for a patch)
+ * Fix: ignore unknown BGP-LS SID
+   reported by: MosesN
+ * Fix: badly deciding when to send or not AddPath from parsing the Capability
+   reported by: ivan-balan
 
 Version 4.0.10
  * Feature: Add decoding for Mac Mobility
